# TP1-POP

./: Manual de utilizador TP1 POP Lucas de Linhares 32187.docx  README.md  Relatório POP TP1 Lucas de Linhares 32187.docx  build.gradle.kts  build.ps1  run.ps1  run.sh  settings.gradle.kts
TP1/: README.md  build.gradle.kts  run.ps1  run.sh
TP1/src/main/java/org/tp1/: CarRegistration.java  Client.java  Contact.java  JsonUtils.java  Main.java  NIF.java  Repair.java  TerminalSize.java  TerminalUtils.java  Worker.java
TP1/src/main/java/org/tp1/Menu/: ListMenus.java  MainMenu.java  Menu.java  ModifyMenus.java  RegisterMenus.java  StatisticsMenus.java  ValidationMenus.java
TP1/src/main/java/org/tp1/TerminalUtils/: Color.java  InputItem.java  SearchItem.java  Style.java  Terminal.java  TerminalSize.java
TP1/src/main/java/org/tp1/Workshop/: CarRegistration.java  Client.java  Contact.java  NIF.java  Repair.java  Role.java  VehicleType.java  Worker.java
src/main/java/org/tp1/: CarRegistration.java  Client.java  Contact.java  Main.java  NIF.java  Role.java  VehicleType.java  Worker.java
terminal_utils/: Cargo.toml  bindings.h  build.rs
terminal_utils/src/: lib.rs
