[package]
name = "terminal_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"

[build-dependencies]
cbindgen = "0.26.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
strip = true      # Remove debug symbols
